Final batch of tests. Add some javadoc on the factory methods.